checkpoint commit, reduce filtering is working, discard hook needs work